# ray-trace

./: Cargo.toml  README.md  config.json  config.toml
scenes/: room.json  room.toml  sphere.json  sphere.toml  water.toml  wood_sphere.json  wood_sphere.toml
src/: config.rs  lib.rs  light.rs  main.rs  material.rs  ray.rs  surface.rs  texture.rs
