[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["Gulshan Singh <gsingh2011@gmail.com>"]
edition = "2018"

[lib]
name = "tracerlib"
path = "src/lib.rs"

[[bin]]
name = "ray-tracer"
path = "src/main.rs"

[dependencies]
image = "0.23.9"
nalgebra = { version = "0.22.0", features = ["serde-serialize"] }
noise = "0.6.0"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.32"
serde_json = "1.0.57"
dyn-clonable = "0.9.0"
